# adk-selfrag

./: .env.example  LICENSE  README-ko.md  README.md  main.py  pdf_uploader.py  pyproject.toml
self-rag/: agent.py  custom_agent.py  prompts.py
self-rag/tools/: tools.py
