[project]
name = "adk-selfrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-adk>=0.4.0",
    "langchain>=0.3.25",
    "langchain-community>=0.3.23",
    "llama-index>=0.12.34",
    "openai>=1.77.0",
    "pinecone>=6.0.2",
]
